# cmaketesting

./: .gitignore  CMakeLists.txt  README.md  build.sh
gamethinger/: BaseScene.cpp  BaseScene.h  BaseSystem.h  BlankScene.h  Box2DSystem.cpp  Box2DSystem.h  Box2dTestScene.cpp  Box2dTestScene.h  CMakeLists.txt  Camera2DSystem.cpp  Camera2DSystem.h  ClickableSystem.cpp  ClickableSystem.h  ComponentRegistry.h  Components.h  CuteC2Components.cpp  CuteC2Components.h  CuteC2System.cpp  CuteC2System.h  CuteMath.cpp  CuteMath.h  DestroySystem.h  Downloader.cpp  Downloader.h  EventManager.h  Events.h  Game.cpp  Game.h  Global.h  ImguiEntityEditor.cpp  ImguiEntityEditor.h  ImguiEntityEditorCustom.h  ImguiEntt.h  ImguiEnttCustom.h  ImguiHeader.h  ImguiMenu.h  ImguiSystemsWindow.h  InputSystem.h  MTGCardSystem.cpp  MTGCardSystem.h  (+51 more)
gamethinger/imgui/: ImguiEntityEditor.cpp  ImguiEntityEditorCustom.h  ImguiEntt.h  ImguiMenu.cpp  ImguiMenu.h  ImguiSystemsWindow.cpp  ImguiSystemsWindow.h  ImguiWindow.h  RenderTestWindow.cpp  RenderTestWindow.h
gamethinger/mtg/: MTGCardSystem.h  MTGComps.cpp  MTGGameScene.cpp  MTGGameScene.h  ScryfallJson.cpp  ScryfallJson.h
gamethinger/network/: NetworkBase.h  NetworkClient.h
gamethinger/scenes/: Box2dTestScene.cpp  Box2dTestScene.h  NetworkTestingScene.cpp  NetworkTestingScene.h  SpaceShooterScene.cpp  SpaceShooterScene.h  TestScene.cpp  TestScene.h  cuteC2TestScene.cpp  cuteC2TestScene.h
gamethinger/systems/: Box2DSystem.cpp  Box2DSystem.h  Camera2DSystem.cpp  Camera2DSystem.h  ClickableSystem.cpp  ClickableSystem.h  CuteC2System.cpp  CuteC2System.h  DestroySystem.cpp  DestroySystem.h  HoverSystem.cpp  HoverSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  NetworkSystem.cpp  NetworkSystem.h  ParentChildSystem.cpp  ParentChildSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h
gamethinger/utils/: Downloader.cpp  UUIDGen.h  Utils.cpp
includeLibs/: CMakeLists.txt
src/: CMakeLists.txt  CurlTest.cpp  CurlTest.h  enetTest.cpp  enetTest.h  main.cpp  more.cpp  more.hpp  morex2.cpp  morex2.hpp
src2/: CMakeLists.txt  main.cpp  morex2.cpp
src3/: CMakeLists.txt  main.cpp
srcsafdgfdg/: CMakeLists.txt  main.cpp  more.cpp  more.hpp  morex2.hpp
subgamethinger/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
